# ReAct_Jax

./: .gitignore  Dockerfile  README.md  environment.yml  eval.py  inferencer.py  pyproject.toml  run.sh  run_tpu.sh  tpu_babysitter.sh  train_model.py
.github/workflows/: docker-image.yaml
ReAct/: __init__.py
ReAct/data/: dataloaders.py  dataset.py  gh_code.py  minipile.py  owt.py  reverse_string.py  tinystories.py  tinytok.json  tokenizer.py
ReAct/model/: baseline.py  blocks.py  react.py
ReAct/utils/: arg_parser.py  arg_types.py  helpers.py  logger.py  losses.py  muon_modded.py  sharding.py  trainer.py
