[project]
name = "react-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "einops>=0.8.0",
    "equinox>=0.11.9",
    "jax>=0.4.35",
    "jaxtyping>=0.2.36",
    "optax>=0.2.4",
    "optuna-integration>=4.1.0",
    "optuna>=4.1.0",
    "rich>=13.9.4",
    "scalax>=0.2.5",
    "tokenizers>=0.20.4",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "lm-eval>=0.4.5",
    "nvitop>=1.3.2",
    "pdbpp>=0.10.3",
    "jmp",
    "jax-array-info",
    "tensorflow>=2.18.0",
    "tensorboard-plugin-profile>=2.18.0",
    "cloud-tpu-profiler>=2.3.0",
    "wandb==0.18.7",
]

[tool.uv.sources]
jmp = { git = "https://github.com/deepmind/jmp" }
jax-array-info = { git = "https://github.com/Findus23/jax-array-info.git" }
